# diff-biophys

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  publish.sh  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml  (+1 more)
concepts/: index.html
diff_biophys/: __init__.py  cryo_em.py  ensemble.py  torch_interop.py
docs/: concepts.md  index.md  theory.md
examples/: __init__.py  benchmark_saxs.py  demonstrate_autodiff.py  diff_biophys_showcase.ipynb  refinement_from_pdb.py  refinement_lab.py  structure_refinement.ipynb  structure_refinement.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
tests/: __init__.py  conftest.py  test_autodiff.py  test_backbone.py  test_cd_parity.py  test_coverage_expansion.py  test_cryo_em.py  test_e2e_gradient_descent.py  test_edge_cases.py  test_ensemble.py  test_geometry_parity.py  test_geometry_reconstruction.py  test_geometry_roundtrip.py  test_imports.py  test_invariance.py  test_kabsch_degenerate.py  test_kabsch_grad_stability.py  test_kabsch_parity.py  test_nerf_backbone_geometry.py  test_nh_bond_vectors.py  test_nmr_advanced.py  test_nmr_io.py  test_notebook_integrity.py  test_numerical_stability.py  test_properties.py  test_random_coil_wishart.py  test_rdc_edge_cases.py  test_rdc_fitting.py  test_rdc_parity.py  test_refinement_factories.py  test_rg.py  test_ring_current_distance_decay.py  test_saupe_tensor_properties.py  test_saxs_excluded_volume_fraser.py  test_saxs_forward_limit.py  test_saxs_guinier.py  test_saxs_parity.py  test_science_ca_shifts.py  test_science_karplus.py  test_science_rdc.py  (+8 more)
theory/: index.html
use_cases/: index.html
(+57 files in other folders)
