[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diff-biophys"
version = "0.1.0"
description = "Differentiable biophysical modeling in JAX"
authors = [{name = "George Elkins"}]
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "biotite",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ipython",
]

